2004-10-04 Sanjay Gupta <gsanjay@novell.com>

	* IButtonControl.cs: Corrected property name.

2004-10-04 Sanjay Gupta <gsanjay@novell.com>

	* ParameterCollection.cs: Updated.

2004-10-04 Sanjay Gupta <gsanjay@novell.com>

	* Parameter.cs: Updated and completed implementation.

2004-10-01 Sanjay Gupta <gsanjay@novell.com>

	* ParameterCollection.cs: Resolved warnings, "Unreachable code detected"
	  while compilation.

2004-10-01 Sanjay Gupta <gsanjay@novell.com>

	* AccessDataSource.cs: Initial implementation.

2004-09-30 Sanjay Gupta <gsanjay@novell.com>

	* DataControlRowState.cs: 
	* ScrollBars.cs:
	* TreeNodeTypes.cs: Added attribute.
	* DataControlRowType.cs:
	* HotSpotMode.cs:
	* SortDirection.cs: Corrected enumeration values.
	* TableRowSection.cs: Added new enumeration.
	* ObjectDataSourceStatusEventHandler.cs: Corrected method name.

2004-09-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TableStyle.cs: don't render empty 'rules' attribute (again).

2004-09-21 Sanjay Gupta <gsanjay@novell.com>

	* FormViewUpdatedEventArgs.cs: Spelling mistake.

2004-09-14 Sanjay Gupta <gsanjay@novell.com>
	
	* Literal.cs: Added new method Focus().

2004-09-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RadioButton.cs: fix GroupName when the control is inside a
	NamingContainer different from Page. Closes bug #65586.

2004-09-07  Sanjay Gupta <gsanjay@novell.com>
	
	* Localize.cs: Added new class.

2004-09-03  Gaurav Vaish <gvaish_mono AT lycos.com>

	* CompositeControl.cs  : Completed
	* Login.cs             : Initial implementation.

2004-09-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Xml.cs: fixed get_DocumentContent (it was returning "" always!) and
	don't call MapPathSecure on the content itself.
	
	* XmlBuilder.cs: handle XML documents written inside asp:xml. The
	document is checked at parse time and will be checked again at run time.

	Fixes bug #63828.

2004-08-31  Sanjay Gupta <gsanjay@novell.com>

	* AuthenticateEventHandler.cs: 