@@ -1,3 +1,7 @@
+2004-10-08 Sanjay Gupta <gsanjay@novell.com>
+
+	* ControlIDConverter.cs: Initial implementation.
+
 2004-10-04 Sanjay Gupta <gsanjay@novell.com>
 
 	* IButtonControl.cs: Corrected property name.
